Admin login seed and behaviour

--- a/InternshipIS/AuthorizationService/appsettings.json
+++ b/InternshipIS/AuthorizationService/appsettings.json
@@ -9,7 +9,7 @@
 
   "AllowedHosts": "*",
   "AuthorizationOptions": {
-    "ConnectionString": "Server=sqlhost,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;",
+    "ConnectionString": "Server=host.docker.internal,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;",
     "AdministratorEmail": "vachlu94@osu.cz"
   },
 
