--- a/InternshipIS/docker-compose.yml
+++ b/InternshipIS/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     depends_on: 
        - rabbitmq
     extra_hosts:
-      - "praxeosu.cz: 192.168.1.230"
-      - "sqlhost: 192.168.1.230"
+      - "${SERVER_NAME}:${SERVER_IP}"
+      - "${SQL_HOST}:${SQL_HOST_IP}"
+    env_file: .env
 
   notificationservice:
     ports:
@@ -37,8 +38,9 @@ services:
     depends_on: 
        - rabbitmq
     extra_hosts:
-      - "praxeosu.cz: 192.168.1.230"
-      - "sqlhost: 192.168.1.230"
+      - "${SERVER_NAME}:${SERVER_IP}"
+      - "${SQL_HOST}:${SQL_HOST_IP}"
+    env_file: .env
 
   client:
     image: ${DOCKER_REGISTRY-}client
@@ -59,8 +61,10 @@ services:
       - HTTPS=true
       - VITE_INTERNSHIPS_API_BASE_URL=https://praxeosu.cz:5005
       - VITE_AUTH_API_BASE_URL=https://praxeosu.cz:5001
+      - SERVER_NAME=praxeosu.cz
     extra_hosts:
-      - "praxeosu.cz: 192.168.1.230"
+      - "praxeosu.cz: 192.168.0.3"
+    env_file: .env
 
   rabbitmq:
     container_name: rabbitmq
