--- a/InternshipIS/AuthorizationService/appsettings.Development.json
+++ b/InternshipIS/AuthorizationService/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "AuthorizationOptions": {
-    "AuthorizationOptions:ConnectionString": "Server=sqlhost,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;"
+    "AuthorizationOptions:ConnectionString": "Server=SQL_HOST_PLACEHOLDER,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;"
   }
 }
