--- a/InternshipIS/InternshipService/appsettings.json
+++ b/InternshipIS/InternshipService/appsettings.json
@@ -9,7 +9,7 @@
 
   "AllowedHosts": "*",
   "DatabaseOptions": {
-    "ConnectionString": "Server=sqlhost,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;"
+    "ConnectionString": "Server=SQL_HOST_PLACEHOLDER,1433;Database=InternshipDB;User Id=developer;Password=developer; TrustServerCertificate=true;"
   },
 
   "MessagingOptions": {
