--- a/InternshipIS/internship.webapp/nginx.conf.template
+++ b/InternshipIS/internship.webapp/nginx.conf.template
@@ -1,11 +1,11 @@
 server {
     listen 443 ssl;
-    server_name praxeosu.cz;
+    server_name ${SERVER_NAME};
 
     ssl_certificate /etc/nginx/ssl/praxeosucz.crt;
     ssl_certificate_key /etc/nginx/ssl/private/praxeosucz.key;
     ssl_client_certificate /etc/nginx/ssl/praxeosuczCA.crt;
-    ssl_verify_client      optional;
+    ssl_verify_client optional;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
@@ -18,9 +18,10 @@ server {
     }
 
     location /api/ {
-        proxy_pass https://praxeosu.cz:5001;
+        proxy_pass https://${SERVER_NAME}:5001;
         proxy_ssl_verify on;
         proxy_ssl_trusted_certificate /etc/nginx/ssl/praxeosuczCA.crt;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,9 +29,10 @@ server {
     }
 
     location /intern/ {
-        proxy_pass https://praxeosu.cz:5005;
+        proxy_pass https://${SERVER_NAME}:5005;
         proxy_ssl_verify on;
         proxy_ssl_trusted_certificate /etc/nginx/ssl/praxeosuczCA.crt;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
